Causeview Package Complete/src/objects/Gift_Batch__c.object
<CustomObject>
    <description>Causeview - Offline batch processing of gifts.</description>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of cash gifts in batch.</description>
        <label># of Cash Gifts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total dollar value of cash gifts in batch.</description>
        <label>Cash $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of Cheque gifts in batch.</description>
        <label># of Check Gifts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total dollar value of cheque gifts in batch.</description>
        <label>Check $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date batch was closed</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of credit card gifts in batch.</description>
        <label># of Credit Card Gifts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total dollar value of credit card gifts in batch.</description>
        <label>Credit Card $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of batch.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Direct Deposit Gifts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Direct Deposit $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Batch name.</description>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date batch was opened.</description>
        <label>Open Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of other gifts in batch.</description>
        <label># of Other Gifts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total dollar value of other gifts in batch.</description>
        <label>Other $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shareplan_Gifts__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Recurring Gifts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shareplan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recurring $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Batch Template associated.</description>
        <label>Template Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Batch_Template__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Batch_Template__c</referenceTo>
        <relationshipLabel>Gift Batches</relationshipLabel>
        <relationshipName>Gift_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_ACH_PAD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total ACH/PAD $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Amount__c</fullName>
        <description>Total dollar amount in batch.</description>
        <formula>Cash__c + Cheque__c + Credit_Card__c + Direct_Deposit__c + Other__c + Total_ACH_PAD__c + Total_In_Kind__c + Total_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gift Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gift__c</fullName>
        <description>Total number of gifts in batch.</description>
        <formula>Cash_Gifts__c + Cheque_Gifts__c + Credit_Card_Gifts__c + Direct_Deposit_Gifts__c + Other_Gifts__c + of_ACH_PAD_payments__c + of_In_Kind_Payments__c + of_Stock_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gift #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_In_Kind__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total In Kind $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Stock $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_ACH_PAD_payments__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of ACH/PAD payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_In_Kind_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of In Kind Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Stock_Payments__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Stock Payments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gift Batch</label>
    <listViews>
        <fullName>All_Batches</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Template_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Cash__c</columns>
        <columns>Cheque__c</columns>
        <columns>Credit_Card__c</columns>
        <columns>Direct_Deposit__c</columns>
        <columns>Shareplan__c</columns>
        <columns>Total_Gift__c</columns>
        <columns>Total_Gift_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Batches</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Total_Gift__c</columns>
        <columns>Total_Gift_Amount__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Template_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Close_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Open</label>
    </listViews>
    <nameField>
        <displayFormat>GB-{00000}</displayFormat>
        <label>Batch #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>